# matrix_multiply

./: CMakeLists.txt  README.md
config/: matrix_mul.h.in
data/: blocked_1024.txt  blocked_128.txt  blocked_256.txt  blocked_32.txt  blocked_512.txt  blocked_512_clang.txt  blocked_64.txt  naive.txt  python_32.txt  python_64.txt  strip.txt  sum.txt
include/: matrix_mul.h  test_library.h  timer.h
lib/: matrix_mul.c  test_library.c  timer.c
python/: plotting.py  python_numpy.py  python_plain.py  python_test.py
src/: main.c
test/: blocked_multiply_large.c  blocked_multiply_small.c  freq_test.c  ipc_test.c  naive_multiply_small.c  strip_multiply_large.c  strip_multiply_small.c  sum_multiply_large.c  sum_multiply_small.c  timer_test.c
typslides/: bibliography.bib  main.typ
typslides/images/: block_size.py  complexity.py  memory_req.py  plotting.py  work_compiler.py  work_cycle.py
